--- a/app.json
+++ b/app.json
@@ -4,12 +4,12 @@
     "slug": "LifeKnules",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/Logo.jpg",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "splash": {
-      "image": "./assets/images/splash.png",
-      "resizeMode": "contain",
+      "image": "./assets/images/bg.webp",
+      "resizeMode": "cover",
       "backgroundColor": "#ffffff"
     },
     "ios": {
